@@ -9,7 +9,6 @@ v0.8
 Future:
 	connect in background via socket.setblocking(0)
 	border around album art?
-	use threading for album art
 	switch to pygtk's statusicon (2.10) and remove gnome-python dep
 		- then we can finally use skip_taskbar_hint since we will
 		  be able to reliably detect if the sysicon is displayed
